# zhigalev_travel

./: .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  Dockerfile  README.md  docker-compose.yml  entrypoint.sh  pyproject.toml  pytest.ini  requirements.txt  ruff.toml
src/: manage.py
src/hotel_service/: asgi.py  settings.py  urls.py  wsgi.py
src/rooms/: admin.py  urls.py
src/rooms/migrations/: 0001_initial.py  0002_booking_rooms_booki_room_id_c2f7ab_idx_and_more.py
src/rooms/models/: __init__.py  booking.py  room.py
src/rooms/repositories/: room_repository.py
src/rooms/serializers/: __init__.py  serializers.py
src/rooms/services/: __init__.py  service.py
src/rooms/tests/: test_models_booking.py  test_models_room.py  test_serializers.py  test_services.py  test_views_booking.py  test_views_room.py
src/rooms/views/: booking_views.py  room_views.py
